Bumped default vm memory settings for junits in IDEA so that running bigger test suites in IDEA works OK